--- a/index.html
+++ b/index.html
@@ -93,6 +93,95 @@
 	</section>
 
 
+<!-- Facilities -->
+
+<section class="facilities">
+	<h1>Our Facilities</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+	<div class="row">
+		<div class="facilities-column">
+			<img src="images/library.png">
+			<h3>World Class Library</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut suscipit nisl et mauris convallis, a vulputate tellus pellentesque.</p>
+		</div>
+		<div class="facilities-column">
+			<img src="images/basketball.png">
+			<h3>Largest Playground</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut suscipit nisl et mauris convallis, a vulputate tellus pellentesque.</p>
+		</div>
+		<div class="facilities-column">
+			<img src="images/cafeteria.png">
+			<h3>Tasty and Healthy Food</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut suscipit nisl et mauris convallis, a vulputate tellus pellentesque.</p>
+		</div>
+
+
+	</div>
+	
+
+</section>
+
+<!-- Testimonials -->
+
+<section class="testimonials">
+	<h1>What Our Students Says</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+	<div class="row">
+		<div class="testimonials-col">
+			<img src="images/user1.jpg">
+			<div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut suscipit nisl et mauris convallis, a vulputate tellus pellentesque.</p>
+				<h3>Christine Berkley</h3>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-o"></i>
+
+			</div>
+		</div>
+		<div class="testimonials-col">
+			<img src="images/user2.jpg">
+			<div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut suscipit nisl et mauris convallis, a vulputate tellus pellentesque. </p>
+				<h3>David Byer</h3>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-half-o"></i>
+
+			</div>
+		</div>
+	</div>
+	
+</section>
+
+
+<!-- Call To Action -->
+
+<section class="cta">
+	<h1>Enroll For Our Various Online Courses<br />Anywhere From The World</h1>
+	<a href="" class="hero-btn">CONTACT US</a>
+</section>
+
+<!-- Footer -->
+<section class="footer">
+	<h4>About Us</h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut suscipit nisl et mauris convallis, a vulputate tellus pellentesque.<br /> Suspendisse consequat, dui eu feugiat pellentesque, enim erat sagittis mauris, quis faucibus metus magna et turpis.</p>
+	<div class="icons">
+		<i class="fa fa-facebook"></i>
+		<i class="fa fa-twitter"></i>
+		<i class="fa fa-instagram"></i>
+		<i class="fa fa-linkedin"></i>
+	</div>
+	<p>Made  with <i class="fa fa-heart-o"></i> by Easy Tutorials.</p>
+</section>
+
+
+
+
 <!-- JavaScript for Toggle Menu -->
 
 <script>
