--- a/blog.html
+++ b/blog.html
@@ -18,11 +18,11 @@
 			<div class="nav-links" id="navLinks">
 				<i class="fa fa-times" onclick="hideMenu()"></i>
 				<ul>
-					<li><a href="">HOME</a></li>
-					<li><a href="">ABOUT</a></li>
-					<li><a href="">COURSE</a></li>
-					<li><a href="">BLOG</a></li>
-					<li><a href="">CONTACT</a></li>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="courses.html">COURSE</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
@@ -46,21 +46,22 @@
 			<br />
 			<p>Massa tincidunt nunc pulvinar sapien et. Consequat ac felis donec et odio pellentesque diam. Nisl nunc mi ipsum faucibus vitae aliquet. Maecenas sed enim ut sem viverra aliquet eget sit. Laoreet sit amet cursus sit amet. Sed vulputate odio ut enim. Tempor commodo ullamcorper a lacus vestibulum sed arcu non odio. Volutpat blandit aliquam etiam erat velit. Morbi quis commodo odio aenean sed adipiscing. Hac habitasse platea dictumst quisque sagittis purus sit. Bibendum arcu vitae elementum curabitur. Cras semper auctor neque vitae tempus. Bibendum est ultricies integer quis auctor elit. Aenean vel elit scelerisque mauris pellentesque pulvinar.</p>
 
-		</div>
-
-		<div class="comment-box">
+			<div class="comment-box">
 
 			<h3>Leave a Comment</h3>
 			<form class="comment-form">
-				<input type="text" name="Enter name">
-				<input type="email" name="Enter e-mail">
-				<textarea rows="5" placeholder="Your comment">
+				<input type="text" placeholder="Enter name" />
+				<input type="email" placeholder="Enter e-mail" />
+				<textarea rows="5" placeholder="Your comment"></textarea>
 				<button type="submit" class="hero-btn red-btn">POST COMMENT</button>
 					
 				</textarea>
 			</form>
 			
 		</div>
+
+		</div>
+
 
 
 		<div class="blog-right">
