--- a/contact.html
+++ b/contact.html
@@ -28,29 +28,59 @@
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 
 		</nav>
-		<h1>About Us</h1>
+		<h1>Contact Us</h1>
 		
 	</section>
 
-<!-- About us Content  -->
+<!-- Contact us Content  -->
 
-<section class="about-us">
+<section class="location">
+	
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3451.5888722708896!2d-51.224688485550715!3d-30.105958741099553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951982f799201ded%3A0x78e540f92f5c7ae1!2sAv.%20Vicente%20Monteggia%2C%20Porto%20Alegre%20-%20RS%2C%2091740-290!5e0!3m2!1spt-BR!2sbr!4v1628464633287!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+</section>
+
+<section class="contact-us">
 	
 	<div class="row">
-		<div class="about-col">
-			<h1>We are the world's largest university</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut suscipit nisl et mauris convallis, a vulputate tellus pellentesque. Suspendisse consequat, dui eu feugiat pellentesque, enim erat sagittis mauris, quis faucibus metus magna et turpis.</p>
-			<a href="" class="hero-btn red-btn">EXPLORE NOW</a>
-		</div>
-		<div class="about-col">
-			<img src="images/about.jpg" />
-		</div>
-		
+		<div class="contact-col">
+			<div>
+				<i class="fa fa-home"></i>
+				<span>
+					<h5>XYZ Road, ABC Building</h5>
+					<p>Porto Alegre, Rio Grande do SUl, BR</p>
+				</span>
+			</div>
+			<div>
+				<i class="fa fa-phone"></i>
+				<span>
+					<h5>+55 51 123-456</h5>
+					<p>Monday to saturdays, 10AM to 6PM</p>
+				</span>
+			</div>
+			<div>
+				<i class="fa fa-envelope-o"></i>
+				<span>
+					<h5>info@gmail.com</h5>
+					<p>Email us your query</p>
+				</span>
+			</div>
 
+		</div>
 
+		<div class="contact-col">
+			<form action="form-handler.php" method="post">
+				<input type="text" name="name" placeholder="Enter your name" required=""/>
+				<input type="email" name="email" placeholder="Enter your email address" required=""/>
+				<input type="text" name="subject" placeholder="Enter your subject" required=""/>
+				<textarea rows="8" name ="message" placeholder="Message" required=""></textarea>
+				<button type="submit" class="hero-btn red-btn">Send Message</button>
+
+			</form>
+		</div>
 
 	</div>
-
 
 </section>
 
